# rag_bot_attachment_project

./: .gitignore  Readme.md  docker-compose.yml
client/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/api/: client.ts
client/src/components/: ChatMessage.tsx  CitationCard.tsx  ConversationSidebar.tsx  DocumentList.tsx  LlmModeToggle.tsx  MarkdownContent.tsx  ThemeToggle.tsx  UploadZone.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useTheme.ts
client/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx
client/src/types/: api.ts
docs/: implementation.md  notes.md  security-assessment-and-remediation-plan.md
server/: .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  cli.py  config.py  db.py  main.py  schemas.py  uploads.py  worker.py
server/app/auth/: deps.py  passwords.py  policies.py  rate_limit.py  sessions.py
server/app/ingestion/: __init__.py  chunk.py  chunk_store.py  embed.py  extract.py  pipeline.py
server/app/llm/: __init__.py  ollama_client.py  runtime.py
server/app/rag/: __init__.py  agent.py  prompts.py  tools.py
server/app/retrieval/: __init__.py  hybrid_search.py
server/app/routers/: __init__.py  auth.py  chat.py  conversations.py  documents.py  system.py
server/db/: init.sql
server/db/migrations/: 001_conversations.sql  002_users_sessions.sql  003_chat_attribution.sql  004_p0_security.sql
server/tests/: test_policies.py  test_security_api.py
