# Python project manifest — managed by uv (like package.json for Node).
# Run `uv sync` to install deps from uv.lock into .venv
# Run `uv add <package>` to add a new dependency

[project]
name = "rag-server"
version = "0.1.0"
description = "FastAPI backend for the RAG knowledge base"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",           # web framework + automatic OpenAPI docs
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",           # request/response validation (schemas.py)
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",   # file uploads (Milestone 2)
    "uvicorn[standard]>=0.49.0",  # ASGI server that runs FastAPI
]
